--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="./logo.svg" type="image/x-icon" />
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;900&display=swap" rel="stylesheet" />
-    <title>Weatherize.v2</title>
-</head>
-
-<body>
-    <div id="app"></div>
-    <script src="/bundle.js"></script>
-</body>
-
-</html>
+<!doctype html><html lang="en"><head><meta charset="UTF-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><link rel="shortcut icon" href="./logo.svg" type="image/x-icon"/><link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;900&display=swap" rel="stylesheet"/><title>Weatherize.v2</title></head><body><div id="app"></div><script src="bundle.js"></script></body></html>
